# OpenAvatarInterview

./: .env.example  .gitignore  README.md  install.py  pyproject.toml
config/: interview_with_lam.yaml
docs/superpowers/specs/: 2026-05-13-homeview-resume-interview-design.md
src/: app.py  demo.py
src/chat_engine/: chat_engine.py
src/chat_engine/common/: client_handler_base.py  handler_base.py  logic_base.py
src/chat_engine/contexts/: common_module_context.py  handler_context.py  logic_context.py  session_clock.py  session_context.py  session_history.py
src/chat_engine/core/: chat_session.py  handler_manager.py  logic_manager.py  signal_manager.py  stream_filter.py  stream_manager.py
src/chat_engine/data_models/: chat_data_type.py  chat_engine_config_data.py  chat_signal.py  chat_signal_type.py  chat_stream.py  chat_stream_config.py  chat_stream_status.py  engine_channel_type.py
src/engine_utils/: directory_info.py  import_utils.py  interval_counter.py  media_utils.py  path_utils.py  text_filter.py
src/engine_utils/audio_utils/: __init__.py  auto_gain_control.py  common_audio_utils.py
src/handlers/agent/: __init__.py  agent_data_models.py  chat_agent_handler.py  pyproject.toml
src/handlers/interview/: __init__.py  interview_agent_handler.py  (+2 more)
ssl_certs/: localhost.crt  localhost.key
tests/: test_demo.py  test_emotion_agent.py  test_interview_models.py  test_interview_report_pipeline.py  test_interviewer_emotion_integration.py  test_report_html_renderer.py  test_report_pdf_renderer.py  test_resume_analysis_agents.py  test_session_repository.py
(+258 files in other folders)
