[project]
name = "open-avatar-interview"
version = "0.1.0"
description = "Independent LAM-based interview system with LangGraph orchestration"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
  "addict~=2.4.0",
  "aiohttp~=3.11.12",
  "aiortc>=1.12.0,<2.0",
  "av>=14.0,<16.0",
  "dashscope>=1.23.1",
  "dynaconf~=3.2.7",
  "fastapi[standard]~=0.115.12",
  "fastrtc",
  "gradio~=5.9.1",
  "huggingface-hub>=0.23.2,<1.0",
  "langgraph",
  "librosa~=0.10.2",
  "loguru",
  "modelscope>=1.25.0",
  "numpy<=1.26.4",
  "openai",
  "onnxruntime-gpu~=1.20.2",
  "opencv-python>=4.9.0,<5.0",
  "opuslib>=3.0.1",
  "pillow>=11.1.0",
  "protobuf>=4.25.3,<5",
  "pyaml>=25.1.0",
  "pyjwt==2.10.1",
  "python-dotenv>=1.1.0",
  "pytest",
  "pydantic",
  "pypdf",
  "python-docx",
  "pyyaml",
  "scipy~=1.15.1",
  "setuptools>=69.5.1,<70",
  "soundfile~=0.13.1",
  "starlette~=0.41.3",
  "torch==2.8.0",
  "torchaudio==2.8.0",
  "torchvision==0.23.0",
  "transformers~=4.44.2",
  "tqdm~=4.67.1",
  "typer>=0.15.1",
  "typing-extensions~=4.12.2",
  "uvicorn~=0.34.0",
  "yapf==0.40.1",
  "termcolor~=3.0.1",
  "funasr~=1.2.3",
]

[tool.pytest.ini_options]
pythonpath = [
  "src",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128" },
]
torchvision = [
  { index = "pytorch-cu128" },
]
torchaudio = [
  { index = "pytorch-cu128" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
